# py3810

./: _CStick_DD_OBV_UIMW_Diff_UIMW_cache.py  _CStick_DD_OBV_UIMW_Diff_UIMW_cache_old.py  __yf_1b_dates_missing_in_df_picks.ipynb  _yf_1c_days_to_drop.ipynb  _yf_1clean_OHLCV_close.ipynb  _yf_2split_train_val_test.ipynb  _yf_3f_random_iloc_slices.ipynb  _yf_3random_iloc_slices.ipynb  _yf_4perf_ranks.ipynb  _yf_52wkHi_screen.ipynb  _yf_5read_symbols_perf_ranks copy.ipynb  _yf_5read_symbols_perf_ranks.ipynb  _yf_6eval.ipynb  _yf_7_freq_cnt.ipynb  _yf_7_freq_cnt_test.ipynb  _yf_7_freq_cnt_val.ipynb  _yf_7a.ipynb  _yf_AdjOHLV.ipynb  _yf_CStick_DD_OBV_UIMW_Diff_UIMW_cache.py  _yf_plot_mySymbols.py  _yf_plotly.py  _yf_stk_etf_info.ipynb  colab_test.ipynb  download_symbols_OHLCV.py  grid_letter.ipynb  load_pickled_df_OHLCV.py  myUtils.py  my_help.ipynb  pf_vectorized.ipynb  pm_run.ipynb  pm_test.ipynb  print_n_plot_symbols.py  ps1_df_ps1n2_results.32 - Copy.py  pyproject copy.toml  pyproject.toml  sch_test.ipynb  sch_test.nbconvert.ipynb  sch_yf_0AdjOHLV_download_chunks.py  sch_yf_1clean_OHLCV_close.py  sch_yf_scheduled_task.py  (+116 more)
.git_/: FETCH_HEAD  HEAD  config  index
bb/: item_sale.ipynb  item_sale_clean.ipynb  item_sale_group.ipynb  item_sale_ml.ipynb
exp_if_name_main/: file_one.py  file_two.py
karpathy/: micrograd.ipynb  micrograd_1.ipynb  micrograd_2.ipynb  micrograd_3.ipynb  micrograd_4.ipynb  micrograd_5.ipynb  micrograd_matrix_operations.ipynb  micrograd_matrix_operations_10.ipynb  micrograd_matrix_operations_11.ipynb  micrograd_matrix_operations_12.ipynb  work.ipynb  (+19 more)
(+10 files in other folders)
