[tool.poetry]
name = "py3810"
version = "0.1.0"
description = ""
authors = ["pympk <yee_ping@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.8.1"
# ipykernel = "~5.3.4"
ipykernel = "6.21.2"
papermill = "^2.4.0"
pandas = "^1.5.3"
matplotlib = "^3.7.0"
yfinance = "^0.2.12"
plotly = "^5.13.1"
statsmodels = "^0.13.5"
sklearn = "^0.0.post2"
ta-lib = {path = "TA_Lib-0.4.24-cp38-cp38-win_amd64.whl"}
ipywidgets = "^8.0.4"
nbconvert = "^7.2.9"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.2"
selenium = "^4.8.2"
webdriver-manager = "^3.8.5"
pandas-market-calendars = "^4.1.4"
yahooquery = "^2.3.1"
pytube = "^12.1.3"  #  2023-05-30: remove pytube if it continues to get KeyError: 'videoDetails'
ffmpeg = "^1.4"  #  2023-05-30: remove pytube if it continues to get KeyError: 'videoDetails'
graphviz = "^0.20.1"
torch = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^23.1.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
